--- a/WebClinet/Areas/Admin/Views/Shared/Layout.cshtml
+++ b/WebClinet/Areas/Admin/Views/Shared/Layout.cshtml
@@ -152,15 +152,15 @@
                                     <i class="mdi mdi-account"></i>
                                 </a>
                                 <div class="dropdown-menu dropdown-menu-right">
-                                    <a href="./app-profile.html" class="dropdown-item">
+                                    <a href="/" class="dropdown-item">
                                         <i class="icon-user"></i>
                                         <span class="ml-2">Profile </span>
                                     </a>
-                                    <a href="./email-inbox.html" class="dropdown-item">
+                                    <a href="/" class="dropdown-item">
                                         <i class="icon-envelope-open"></i>
                                         <span class="ml-2">Inbox </span>
                                     </a>
-                                    <a href="./page-login.html" class="dropdown-item">
+                                    <a href="@Url.Action("Logout","Login")" class="dropdown-item">
                                         <i class="icon-key"></i>
                                         <span class="ml-2">Logout </span>
                                     </a>
@@ -181,140 +181,57 @@
         <div class="quixnav">
             <div class="quixnav-scroll">
                 <ul class="metismenu" id="menu">
-                    <li class="nav-label first">Main Menu</li>
+                    <li class="nav-label first">Danh mục menu</li>
                     <li>
-                        <a href="index.html"><i class="icon icon-single-04"></i><span class="nav-text">Dashboard</span></a>
+                        <a href="@Url.Action("Index","HomeAdmin")"><i class="icon icon-single-04"></i><span class="nav-text">Bảng điều khiển</span></a>
                     </li>
                     <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-single-04"></i><span class="nav-text">Dashboard</span>
+                        <a class="has-arrow" href="@Url.Action("Index","Menu")" aria-expanded="false">
+                            <i class="icon icon-app-store"></i><span class="nav-text">Menu</span>
                         </a>
-                        <ul aria-expanded="false">
-                            <li><a href="./index.html">Dashboard 1</a></li>
-                            <li><a href="./index2.html">Dashboard 2</a></li>
-                        </ul>
-                    </li>
-
-                    <li class="nav-label">Apps</li>
-                    <li>
-                        <a class="has-arrow" href="/Admin/MenuType/Index" aria-expanded="false">
-                            <i class="icon icon-app-store"></i><span class="nav-text">Apps</span>
-                        </a>
-                        <ul aria-expanded="false">
-                            <li><a href="./app-profile.html">Profile</a></li>
-                            <li>
-                                <a class="has-arrow" href="javascript:void()" aria-expanded="false">Email</a>
-                                <ul aria-expanded="false">
-                                    <li><a href="./email-compose.html">Compose</a></li>
-                                    <li><a href="./email-inbox.html">Inbox</a></li>
-                                    <li><a href="./email-read.html">Read</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./app-calender.html">Calendar</a></li>
-                        </ul>
                     </li>
                     <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-chart-bar-33"></i><span class="nav-text">Charts</span>
+                        <a class="has-arrow" href="@Url.Action("Index","MenuType")" aria-expanded="false">
+                            <i class="icon icon-chart-bar-33"></i><span class="nav-text">Loại Menu</span>
                         </a>
-                        <ul aria-expanded="false">
-                            <li><a href="./chart-flot.html">Flot</a></li>
-                            <li><a href="./chart-morris.html">Morris</a></li>
-                            <li><a href="./chart-chartjs.html">Chartjs</a></li>
-                            <li><a href="./chart-chartist.html">Chartist</a></li>
-                            <li><a href="./chart-sparkline.html">Sparkline</a></li>
-                            <li><a href="./chart-peity.html">Peity</a></li>
-                        </ul>
                     </li>
-                    <li class="nav-label">Components</li>
                     <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-world-2"></i><span class="nav-text">Bootstrap</span>
+                        <a class="has-arrow" href="@Url.Action("Index","NewCategory")" aria-expanded="false">
+                            <i class="icon icon-world-2"></i><span class="nav-text">Loại tin tức</span>
                         </a>
-                        <ul aria-expanded="false">
-                            <li><a href="./ui-accordion.html">Accordion</a></li>
-                            <li><a href="./ui-alert.html">Alert</a></li>
-                            <li><a href="./ui-badge.html">Badge</a></li>
-                            <li><a href="./ui-button.html">Button</a></li>
-                            <li><a href="./ui-modal.html">Modal</a></li>
-                            <li><a href="./ui-button-group.html">Button Group</a></li>
-                            <li><a href="./ui-list-group.html">List Group</a></li>
-                            <li><a href="./ui-media-object.html">Media Object</a></li>
-                            <li><a href="./ui-card.html">Cards</a></li>
-                            <li><a href="./ui-carousel.html">Carousel</a></li>
-                            <li><a href="./ui-dropdown.html">Dropdown</a></li>
-                            <li><a href="./ui-popover.html">Popover</a></li>
-                            <li><a href="./ui-progressbar.html">Progressbar</a></li>
-                            <li><a href="./ui-tab.html">Tab</a></li>
-                            <li><a href="./ui-typography.html">Typography</a></li>
-                            <li><a href="./ui-pagination.html">Pagination</a></li>
-                            <li><a href="./ui-grid.html">Grid</a></li>
-
-                        </ul>
                     </li>
 
                     <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-plug"></i><span class="nav-text">Plugins</span>
+                        <a class="has-arrow" href="@Url.Action("Index","New")" aria-expanded="false">
+                            <i class="icon icon-plug"></i><span class="nav-text">Tin tức</span>
                         </a>
-                        <ul aria-expanded="false">
-                            <li><a href="./uc-select2.html">Select 2</a></li>
-                            <li><a href="./uc-nestable.html">Nestedable</a></li>
-                            <li><a href="./uc-noui-slider.html">Noui Slider</a></li>
-                            <li><a href="./uc-sweetalert.html">Sweet Alert</a></li>
-                            <li><a href="./uc-toastr.html">Toastr</a></li>
-                            <li><a href="./map-jqvmap.html">Jqv Map</a></li>
-                        </ul>
                     </li>
                     <li>
-                        <a href="widget-basic.html" aria-expanded="false">
-                            <i class="icon icon-globe-2"></i><span class="nav-text">Widget</span>
+                        <a class="has-arrow" href="@Url.Action("Index","ProductCategory")" aria-expanded="false">
+                            <i class="icon icon-globe-2"></i><span class="nav-text">Loại sản phẩm</span>
                         </a>
                     </li>
-                    <li class="nav-label">Forms</li>
                     <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-form"></i><span class="nav-text">Forms</span>
+                        <a class="has-arrow" href="@Url.Action("Index","Product")" aria-expanded="false">
+                            <i class="icon icon-form"></i><span class="nav-text">Sản phẩm</span>
                         </a>
-                        <ul aria-expanded="false">
-                            <li><a href="./form-element.html">Form Elements</a></li>
-                            <li><a href="./form-wizard.html">Wizard</a></li>
-                            <li><a href="./form-editor-summernote.html">Summernote</a></li>
-                            <li><a href="form-pickers.html">Pickers</a></li>
-                            <li><a href="form-validation-jquery.html">Jquery Validate</a></li>
-                        </ul>
                     </li>
-                    <li class="nav-label">Table</li>
                     <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-layout-25"></i><span class="nav-text">Table</span>
+                        <a class="has-arrow" href="@Url.Action("Index","Client")" aria-expanded="false">
+                            <i class="icon icon-single-copy-06"></i><span class="nav-text">Đơn hàng</span>
                         </a>
-                        <ul aria-expanded="false">
-                            <li><a href="table-bootstrap-basic.html">Bootstrap</a></li>
-                            <li><a href="table-datatable-basic.html">Datatable</a></li>
-                        </ul>
-                    </li>
 
-                    <li class="nav-label">Extra</li>
+                    </li>
                     <li>
-                        <a class="has-arrow" href="javascript:void()" aria-expanded="false">
-                            <i class="icon icon-single-copy-06"></i><span class="nav-text">Pages</span>
+                        <a class="has-arrow" href="@Url.Action("Index","Slider")" aria-expanded="false">
+                            <i class="icon icon-layout-25"></i><span class="nav-text">Slider</span>
                         </a>
-                        <ul aria-expanded="false">
-                            <li><a href="/new">Register</a></li>
-                            <li><a href="./page-login.html">Login</a></li>
-                            <li>
-                                <a class="has-arrow" href="javascript:void()" aria-expanded="false">Error</a>
-                                <ul aria-expanded="false">
-                                    <li><a href="./page-error-400.html">Error 400</a></li>
-                                    <li><a href="./page-error-403.html">Error 403</a></li>
-                                    <li><a href="./page-error-404.html">Error 404</a></li>
-                                    <li><a href="./page-error-500.html">Error 500</a></li>
-                                    <li><a href="./page-error-503.html">Error 503</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="./page-lock-screen.html">Lock Screen</a></li>
-                        </ul>
+                    </li>
+                    <li>
+                        <a class="has-arrow" href="@Url.Action("Index","User")" aria-expanded="false">
+                            <i class="icon icon-single-copy-06"></i><span class="nav-text">Tài khoản</span>
+                        </a>
+
                     </li>
                 </ul>
             </div>
